# RustBox

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci-proxy-smoke.yml  ci.yml  pages.yml
apps/rustbox/: Cargo.toml
apps/rustbox-cli/: Cargo.toml
apps/rustbox-cli/src/: main.rs  observability.rs
apps/rustbox-ffi/: Cargo.toml  README.md  build.rs
apps/rustbox-ffi/examples/: basic.c
apps/rustbox-ffi/include/: rustbox.h
apps/rustbox-ffi/src/: abi.rs  boundary.rs  lib.rs  registry.rs  tests.rs
apps/rustbox-ffi/tests/c/: dynamic_library_smoke.c  header_smoke.c  lifecycle_smoke.c  mobile_lifecycle_smoke.c
apps/rustbox-ffi/tests/ios/: Info.plist
apps/rustbox-flutter/: .gitignore  .metadata  .pubignore  CHANGELOG.md  README.md  pubspec.yaml
apps/rustbox-watchdog/: Cargo.toml
apps/rustbox-watchdog/src/: main.rs
apps/rustbox/src/: main.rs  observability.rs
crates/compose/rustbox-compose/: Cargo.toml
crates/compose/rustbox-compose/src/: lib.rs
crates/control/rustbox-clash-api/: Cargo.toml
crates/control/rustbox-clash-api/examples/: export_openapi.rs
crates/control/rustbox-clash-api/src/: lib.rs
crates/control/rustbox-config/: Cargo.toml
crates/control/rustbox-config/src/: compiler.rs  lib.rs  model.rs  stages.rs
crates/control/rustbox-control/: Cargo.toml
crates/control/rustbox-control-api/: Cargo.toml  build.rs
crates/control/rustbox-control-api/proto/: rustbox.control.v1.proto  started_service.proto
crates/control/rustbox-control-api/src/: lib.rs
crates/control/rustbox-control-api/tests/: control_grpc_smoke.rs
crates/control/rustbox-control-service/: Cargo.toml
crates/control/rustbox-control-service/src/: lib.rs
crates/control/rustbox-control/src/: lib.rs  outbound_groups.rs  rule_sets.rs
crates/ffi/rustbox-ffi/: Cargo.toml
crates/ffi/rustbox-ffi/src/: lib.rs
crates/foundation/rustbox-io/: Cargo.toml
crates/foundation/rustbox-io/src/: lib.rs  uot.rs
crates/host/rustbox-host-api/: Cargo.toml
crates/host/rustbox-host-api/src/: lib.rs  tokio_host.rs
crates/host/rustbox-test-host/: Cargo.toml
crates/host/rustbox-test-host/src/: lib.rs
crates/kernel/rustbox-kernel/: Cargo.toml
crates/kernel/rustbox-kernel/src/: dial.rs  lib.rs
crates/kernel/rustbox-kernel/src/host/: mod.rs  net.rs  tokio_host.rs
crates/kernel/rustbox-test-host/: Cargo.toml
crates/kernel/rustbox-test-host/src/: lib.rs
crates/modules/dns/rustbox-dns-core/: Cargo.toml
crates/modules/dns/rustbox-dns-core/src/: cache.rs  fake_ip.rs  lib.rs  model.rs  resolver.rs  reverse.rs  socket.rs  subsystem.rs  transport.rs
crates/modules/inbound/rustbox-inbound-anytls/: Cargo.toml
crates/modules/inbound/rustbox-inbound-anytls/src/: lib.rs
crates/modules/inbound/rustbox-inbound-http/: Cargo.toml
crates/modules/inbound/rustbox-inbound-http/src/: lib.rs
crates/modules/inbound/rustbox-inbound-socks5/: Cargo.toml
crates/modules/inbound/rustbox-inbound-socks5/src/: lib.rs
crates/modules/inbound/rustbox-inbound-transparent/: Cargo.toml
crates/modules/inbound/rustbox-inbound-transparent/src/: lib.rs
crates/platform/rustbox-platform/: Cargo.toml
crates/platform/rustbox-platform-linux/: Cargo.toml
crates/platform/rustbox-platform-linux/src/: lib.rs  network_control.rs  packet_device.rs  process.rs  transparent.rs
crates/platform/rustbox-platform-macos/: Cargo.toml
crates/platform/rustbox-platform-macos/src/: lib.rs
crates/platform/rustbox-platform-windows/: Cargo.toml
crates/platform/rustbox-platform-windows/src/: lib.rs  network_control.rs  packet_device.rs  process.rs
crates/platform/rustbox-platform/src/: lib.rs
crates/platform/rustbox-platform/src/platform/: android.rs  macos.rs
crates/platform/rustbox-platform/src/platform/linux/: lib.rs  network_control.rs  network_metadata.rs  packet_device.rs  process.rs  socket.rs  transparent.rs
crates/platform/rustbox-platform/src/platform/windows/: interface.rs  lib.rs  network_control.rs  network_metadata.rs  packet_device.rs  process.rs  socket.rs
crates/runtime/rustbox-runtime-tokio/: Cargo.toml
crates/runtime/rustbox-runtime-tokio/src/: lib.rs
crates/rustbox/: Cargo.toml
crates/rustbox-config-file/: Cargo.toml
crates/rustbox-config-file/examples/: generate-schema.rs
crates/rustbox-config-file/schema/: rustbox-config-v1.schema.json
crates/rustbox-config-file/src/: clash.rs  document.rs  error.rs  lib.rs  loader.rs  migration.rs  schema.rs  srs.rs  validation.rs
crates/rustbox-config-file/src/document/: observability.rs
crates/rustbox-config-file/tests/: clash_compat.rs
crates/rustbox-config-file/tests/fixtures/: mihomo-reference.yaml
crates/rustbox-ffi/: Cargo.toml  README.md
crates/rustbox-observability/: Cargo.toml
crates/rustbox-observability/src/: config.rs  format.rs  lib.rs  sinks.rs  store.rs
crates/rustbox/src/: app.rs  capabilities.rs  control.rs  dns_hijack.rs  error.rs  hosted.rs  lib.rs  platform.rs  routing.rs  ruleset.rs  runtime.rs  tests.rs  urltest.rs
crates/rustbox/src/compose/: builder.rs  dependency.rs  dns.rs  inbound.rs  mod.rs  outbound.rs
docs/: README.md  anytls-support.md  architecture.md  clash-api-compat.md  client-dns-windows.md  client-networking.md  code-structure.md  config-ffi-architecture.md  configuration-contract.md  configuration.md  control-api.md  current-architecture.md  dns-transports.md  observability-architecture.md  p1-routing-transport.md  proxy-protocol-crate-evaluation.md  sing-box-outbound-selection.md  sing-box-sniffing.md  tun-transparent-proxy-architecture.md
examples/: clash.yaml  rustbox.toml  tun-transparent.toml
scripts/: build-mobile.ps1  build.ps1
scripts/ci/: control-grpc-smoke.ps1  control-grpc-smoke.sh  ffi-smoke.ps1  proxy-smoke.ps1  proxy-smoke.sh  sing-box-smoke.ps1  tun-smoke.ps1
scripts/test/: clash-config.ps1  ffi.ps1  grpc.ps1  http_target.ps1  outbound.ps1  workspace-lints.ps1
website/: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  script.js  styles.css  vite.config.js
website/api/: index.html
(+145 files in other folders)
