[workspace]
resolver = "3"
members = [
    "apps/rustbox-cli",
    "apps/rustbox-watchdog",
    "apps/rustbox-flutter/rust",
    "crates/rustbox-config-file",
    "crates/rustbox",
    "crates/control/rustbox-config",
    "crates/control/rustbox-control",
    "crates/control/rustbox-control-service",
    "crates/control/rustbox-control-api",
    "crates/control/rustbox-clash-api",
    "crates/foundation/rustbox-types",
    "crates/foundation/rustbox-runtime-config",
    "crates/foundation/rustbox-io",
    "crates/kernel/rustbox-test-host",
    "crates/kernel/rustbox-kernel",
    "crates/kernel/rustbox-route",
    "crates/modules/dns/rustbox-dns-core",
    "crates/modules/inspect/rustbox-inspect",
    "crates/modules/inbound/rustbox-inbound-http",
    "crates/modules/inbound/rustbox-inbound-socks5",
    "crates/modules/inbound/rustbox-inbound-transparent",
    "crates/modules/inbound/rustbox-inbound-tun",
    "crates/modules/inbound/rustbox-inbound-anytls",
    "crates/modules/outbound/rustbox-outbound-direct",
    "crates/modules/outbound/rustbox-outbound-anytls",
    "crates/modules/outbound/rustbox-outbound-http",
    "crates/modules/outbound/rustbox-outbound-hysteria2",
    "crates/modules/outbound/rustbox-outbound-naive",
    "crates/modules/outbound/rustbox-outbound-tuic",
    "crates/modules/outbound/rustbox-outbound-wireguard",
    "crates/modules/outbound/rustbox-outbound-shadowtls",
    "crates/modules/outbound/rustbox-outbound-mux",
    "crates/modules/outbound/rustbox-outbound-shadowsocks",
    "crates/modules/outbound/rustbox-outbound-socks5",
    "crates/modules/outbound/rustbox-outbound-trojan",
    "crates/modules/outbound/rustbox-outbound-vless",
    "crates/modules/outbound/rustbox-outbound-vmess",
    "crates/modules/stack/rustbox-stack",
    "crates/modules/transport/rustbox-transport",
    "crates/modules/protocol/rustbox-anytls",
    "crates/rustbox-observability",
    "crates/platform/rustbox-platform",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
# Workspace crates inherit this unless they contain generated bridge glue.
unsafe_code = "forbid"

[patch.crates-io]
# ts_netstack_smoltcp_core 0.4.0 retries canceled socket commands after the
# socket has closed, which can panic inside smoltcp. Remove this patch when an
# upstream release includes the disconnected-response guard below.
ts_netstack_smoltcp_core = { path = "third_party/ts_netstack_smoltcp_core" }
