[package]
name = "rustbox-watchdog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustbox-platform = { path = "../../crates/platform/rustbox-platform" }
sysinfo = "0.37"
tokio = { version = "1", features = ["macros", "rt", "time"] }

[lints]
workspace = true
