[package]
name = "rustbox-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rustbox-config-file = { path = "../../crates/config/rustbox-config-file" }
rustbox = { path = "../../crates/rustbox" }
rustbox-control = { path = "../../crates/control/rustbox-control" }
rustbox-control-api = { path = "../../crates/control/rustbox-control-api" }
rustbox-observability = { path = "../../crates/observability/rustbox-observability" }
rustbox-platform-linux = { path = "../../crates/platform/rustbox-platform-linux" }
rustbox-types = { path = "../../crates/foundation/rustbox-types" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }

[lints]
workspace = true
