[package]
name = "rustbox-observability"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustbox-kernel = { path = "../kernel/rustbox-kernel" }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
rustbox-types = { path = "../foundation/rustbox-types" }

[lints]
workspace = true
