[package]
name = "rustbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustbox-config = { path = "../control/rustbox-config" }
rustbox-control = { path = "../control/rustbox-control" }
rustbox-control-api = { path = "../control/rustbox-control-api" }
rustbox-host-api = { path = "../host/rustbox-host-api" }
rustbox-inbound-http = { path = "../modules/inbound/rustbox-inbound-http" }
rustbox-inbound-anytls = { path = "../modules/inbound/rustbox-inbound-anytls" }
rustbox-inbound-socks5 = { path = "../modules/inbound/rustbox-inbound-socks5" }
rustbox-inbound-transparent = { path = "../modules/inbound/rustbox-inbound-transparent" }
rustbox-inbound-tun = { path = "../modules/inbound/rustbox-inbound-tun" }
rustbox-kernel = { path = "../kernel/rustbox-kernel" }
rustbox-outbound-direct = { path = "../modules/outbound/rustbox-outbound-direct" }
rustbox-outbound-anytls = { path = "../modules/outbound/rustbox-outbound-anytls" }
rustbox-outbound-http = { path = "../modules/outbound/rustbox-outbound-http" }
rustbox-outbound-shadowsocks = { path = "../modules/outbound/rustbox-outbound-shadowsocks" }
rustbox-outbound-socks5 = { path = "../modules/outbound/rustbox-outbound-socks5" }
rustbox-outbound-trojan = { path = "../modules/outbound/rustbox-outbound-trojan" }
rustbox-outbound-vless = { path = "../modules/outbound/rustbox-outbound-vless" }
rustbox-outbound-vmess = { path = "../modules/outbound/rustbox-outbound-vmess" }
rustbox-observability = { path = "../rustbox-observability" }
rustbox-platform-linux = { path = "../platform/rustbox-platform-linux" }
rustbox-platform-windows = { path = "../platform/rustbox-platform-windows" }
rustbox-platform-macos = { path = "../platform/rustbox-platform-macos" }
rustbox-route = { path = "../kernel/rustbox-route" }
rustbox-stack = { path = "../modules/stack/rustbox-stack" }
rustbox-types = { path = "../foundation/rustbox-types" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

[lints]
workspace = true
