[package]
name = "rustbox-compose"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustbox-config = { path = "../../control/rustbox-config" }
rustbox-host-api = { path = "../../host/rustbox-host-api" }
rustbox-inbound-http = { path = "../../modules/inbound/rustbox-inbound-http" }
rustbox-inbound-socks5 = { path = "../../modules/inbound/rustbox-inbound-socks5" }
rustbox-kernel = { path = "../../kernel/rustbox-kernel" }
rustbox-outbound-direct = { path = "../../modules/outbound/rustbox-outbound-direct" }
rustbox-route = { path = "../../kernel/rustbox-route" }
rustbox-runtime-tokio = { path = "../../runtime/rustbox-runtime-tokio" }
rustbox-types = { path = "../../foundation/rustbox-types" }

[lints]
workspace = true
