[package]
name = "rustbox-compose"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustbox-config = { path = "../../control/rustbox-config" }
rustbox-host-api = { path = "../../host/rustbox-host-api" }
rustbox-inbound-http = { path = "../../modules/inbound/rustbox-inbound-http" }
rustbox-inbound-socks5 = { path = "../../modules/inbound/rustbox-inbound-socks5" }
rustbox-inbound-transparent = { path = "../../modules/inbound/rustbox-inbound-transparent" }
rustbox-inbound-tun = { path = "../../modules/inbound/rustbox-inbound-tun" }
rustbox-kernel = { path = "../../kernel/rustbox-kernel" }
rustbox-outbound-direct = { path = "../../modules/outbound/rustbox-outbound-direct" }
rustbox-outbound-http = { path = "../../modules/outbound/rustbox-outbound-http" }
rustbox-outbound-shadowsocks = { path = "../../modules/outbound/rustbox-outbound-shadowsocks" }
rustbox-outbound-socks5 = { path = "../../modules/outbound/rustbox-outbound-socks5" }
rustbox-platform-linux = { path = "../../platform/rustbox-platform-linux" }
rustbox-platform-windows = { path = "../../platform/rustbox-platform-windows" }
rustbox-route = { path = "../../kernel/rustbox-route" }
rustbox-runtime-tokio = { path = "../../runtime/rustbox-runtime-tokio" }
rustbox-stack = { path = "../../modules/stack/rustbox-stack" }
rustbox-types = { path = "../../foundation/rustbox-types" }

[lints]
workspace = true
