[package]
name = "rustbox-clash-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
futures-util = "0.3"
http = "1"
rustbox-control = { path = "../rustbox-control" }
rustbox-control-service = { path = "../rustbox-control-service" }
rustbox-config-file = { path = "../../rustbox-config-file" }
rustbox-kernel = { path = "../../kernel/rustbox-kernel" }
rustbox-observability = { path = "../../rustbox-observability" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
sysinfo = "0.37"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["net", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
url = "2"
utoipa = { version = "5", features = ["axum_extras", "preserve_path_order"] }
utoipa-swagger-ui = { version = "9", default-features = false, features = ["axum", "vendored"] }

[dev-dependencies]
rustbox-types = { path = "../../foundation/rustbox-types" }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
