[package]
name = "rustbox-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex = "1"
rustbox-dns-core = { path = "../../modules/dns/rustbox-dns-core" }
rustbox-kernel = { path = "../../kernel/rustbox-kernel" }
rustbox-types = { path = "../../foundation/rustbox-types" }

[lints]
workspace = true
