[package]
name = "rustbox-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
garde = { version = "0.23", features = ["derive"] }
regex = "1"
rustbox-dns-core = { path = "../../modules/dns/rustbox-dns-core" }
rustbox-kernel = { path = "../../kernel/rustbox-kernel" }
rustbox-types = { path = "../../foundation/rustbox-types" }
serde = { version = "1", features = ["derive"] }
serde_with = "3"

[lints]
workspace = true
