[package]
name = "rustbox-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
rustbox-compose = { path = "../../compose/rustbox-compose" }
rustbox-config = { path = "../../control/rustbox-config" }
rustbox-control = { path = "../../control/rustbox-control" }
rustbox-types = { path = "../../foundation/rustbox-types" }
tokio = { version = "1", features = ["rt-multi-thread", "time", "net"] }

[lints.rust]
unsafe_code = "allow"
