[package]
name = "rustbox-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustbox-types = { path = "../rustbox-types" }
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
