[package]
name = "rustbox-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
getrandom = "0.2"
rustbox-io = { path = "../../foundation/rustbox-io" }
rustbox-route = { path = "../rustbox-route" }
rustbox-types = { path = "../../foundation/rustbox-types" }
tokio = { version = "1", features = ["io-util", "net", "rt", "time"] }

[dev-dependencies]
rustbox-test-host = { path = "../rustbox-test-host" }

[lints]
workspace = true
