[package]
name = "rustbox-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustbox-io = { path = "../../foundation/rustbox-io" }
rustbox-route = { path = "../rustbox-route" }
rustbox-types = { path = "../../foundation/rustbox-types" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
rustbox-test-host = { path = "../rustbox-test-host" }
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
