[package]
name = "rustbox-test-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustbox-kernel = { path = "../rustbox-kernel" }
rustbox-io = { path = "../../foundation/rustbox-io" }
rustbox-types = { path = "../../foundation/rustbox-types" }
tokio = { version = "1", features = ["io-util"] }

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
