[package]
name = "rustbox-platform-linux"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustbox-host-api = { path = "../../host/rustbox-host-api" }
rustbox-io = { path = "../../foundation/rustbox-io" }
rustbox-types = { path = "../../foundation/rustbox-types" }

[target.'cfg(target_os = "linux")'.dependencies]
net-route = "0.4.6"
tun-rs = "2.8.6"

[lints]
workspace = true
