[package]
name = "rustbox-platform-macos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustbox-host-api = { path = "../../host/rustbox-host-api" }
rustbox-io = { path = "../../foundation/rustbox-io" }
rustbox-types = { path = "../../foundation/rustbox-types" }

[target.'cfg(target_os = "macos")'.dependencies]
net-route = "0.4.6"
tun-rs = { version = "2.8.7", features = ["async"] }

[lints]
workspace = true
