[package]
name = "rustbox-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustbox-kernel = { path = "../../kernel/rustbox-kernel" }
socket2 = { version = "0.5", features = ["all"] }

[target.'cfg(target_os = "linux")'.dependencies]
rustbox-io = { path = "../../foundation/rustbox-io" }
rustbox-types = { path = "../../foundation/rustbox-types" }
net-route = "0.4.6"
nix = { version = "0.31.3", features = ["net"] }
tokio = { version = "1", features = ["fs", "io-util", "net", "process", "sync", "time"] }
tun-rs = "2.8.7"

[target.'cfg(target_os = "android")'.dependencies]
rustbox-types = { path = "../../foundation/rustbox-types" }
tokio = { version = "1", features = ["fs"] }

[target.'cfg(target_os = "windows")'.dependencies]
rustbox-io = { path = "../../foundation/rustbox-io" }
rustbox-types = { path = "../../foundation/rustbox-types" }
net-route = "0.4.6"
tun-rs = { version = "2.8.7", features = ["async"] }
tokio = { version = "1", features = ["process", "sync", "time"] }
netdev = "0.45"
netstat2 = "0.11"
netwatcher = { version = "0.7", features = ["tokio"] }
wfp = "0.0.7"
sysinfo = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
object = { version = "0.37", default-features = false, features = ["read", "std"] }
socket2-ext = "0.1.1"

[target.'cfg(target_os = "macos")'.dependencies]
rustbox-io = { path = "../../foundation/rustbox-io" }
rustbox-types = { path = "../../foundation/rustbox-types" }
net-route = "0.4.6"
tun-rs = { version = "2.8.7", features = ["async"] }

[target.'cfg(target_os = "windows")'.dev-dependencies]
tokio = { version = "1", features = ["rt"] }

[lints]
workspace = true
