[package]
name = "rustbox-runtime-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
getrandom = "0.2"
rustbox-host-api = { path = "../../host/rustbox-host-api" }
rustbox-io = { path = "../../foundation/rustbox-io" }
rustbox-types = { path = "../../foundation/rustbox-types" }
tokio = { version = "1", features = ["io-util", "net", "rt", "time"] }

[lints]
workspace = true
